# packing-verifier

./: LICENSE  README.md  pyproject.toml
examples/: cirinsqu_4.json  triintri_1.json
packing_verifier/: __init__.py  cli.py  verifier.py
tests/: test_cli.py
