[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "packing-verifier"
version = "0.1.0"
description = "Command-line verifier for canonical coordinate JSON packing benchmark submissions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nathan Roll"}]
keywords = ["geometry", "packing", "verifier", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.urls]
Homepage = "https://huggingface.co/spaces/NathanRoll/packing-benchmark"
Repository = "https://github.com/Nathan-Roll1/packing-verifier"

[project.scripts]
packing-verifier = "packing_verifier.cli:main"
